--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,8 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --font-raleway: 'Raleway', sans-serif;
+}
+
+.font-raleway {
+  font-family: var(--font-raleway);
+}
+
 html {
   scroll-behavior: smooth;
 }
-
-
