--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,10 @@
   font-family: var(--font-raleway);
 }
 
-html {
+html,body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  box-sizing: border-box;
   scroll-behavior: smooth;
 }
