--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+html,body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
 :root {
   --font-raleway: 'Raleway', sans-serif;
 }
@@ -10,10 +17,18 @@
   font-family: var(--font-raleway);
 }
 
-html,body {
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-  box-sizing: border-box;
-  scroll-behavior: smooth;
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
+
+.animate-fadeIn {
+  animation: fadeIn 1s ease forwards;
+}
+
